--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,3 @@
-<h3 align="center">Angular ngrx/store Tutorial</h3>
-<div class="container">
-  <div class="row">
-    <div class="col-md-3">
-      <app-track></app-track>
-    </div>
-    <div class="col-md-9">
-      <app-display></app-display>
-    </div>
-  </div>
-</div>
+<h3 align="center"><a (click)="navigateToHome()" ><span class="glyphicon glyphicon-home"></span></a>&nbsp;&nbsp;&nbsp;Angular ngrx/store Tutorial</h3>
+
+<router-outlet></router-outlet>
