--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -7,7 +7,8 @@
   </tr>
   </thead>
   <tbody>
-      <tr *ngFor="let track of tracks | async">
+      <tr *ngFor="let track of tracks | async" 
+      (click)="navigateToTrack(track.id)">
           <td>{{ track.id }}</td>
           <td>{{ track.name }}</td>
           <td>
