--- a/src/app/track/track.component.html
+++ b/src/app/track/track.component.html
@@ -1,4 +1,7 @@
-  <div class="panel panel-primary">
+  <div class="container">
+  <div class="row">
+    <div class="col-md-3">
+    <div class="panel panel-primary">
   <div class="panel-heading">
     {{ title }}
   </div>
@@ -26,5 +29,11 @@
           <button (click)="addTrack(track_id.value, track_name.value)" [disabled]="angForm.pristine || angForm.invalid" class="btn btn-primary">Add</button>
         </div>
     </form>
+  </div>
+</div>
+    </div>
+    <div class="col-md-9">
+      <app-display></app-display>
+    </div>
   </div>
 </div>
