--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -7,12 +7,11 @@
   </tr>
   </thead>
   <tbody>
-      <tr *ngFor="let track of tracks | async" 
-      (click)="navigateToTrack(track.id)">
-          <td>{{ track.id }}</td>
-          <td>{{ track.name }}</td>
+      <tr *ngFor="let track of tracks | async">
+          <td (click)="navigateToTrack(track.id)">{{ track.id }}</td>
+          <td (click)="navigateToTrack(track.id)">{{ track.name }}</td>
           <td>
-            <button color="warn" (click)='removeTrack(track.id)'>Delete</button>
+            <button color="warn" (click)='removeTrack(track)'>Delete</button>
           </td>
       </tr>
   </tbody>
